...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#2E7DFF"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_login"


                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:outlineProvider="none"
                android:padding="16dp"
...
                    android:backgroundTint="#2E7DFF"
                    android:text="Login"
                    app:layout_constraintTop_toBottomOf="@+id/password_layout"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/linkToReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Don't have an account? Register here"
                    android:textColor="#2196F3"
                    app:layout_constraintEnd_toEndOf="parent"
...
