...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#2E7DFF"
            app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
                android:backgroundTint="#2E7DFF"
                android:text="Register"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/linkToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Already have an account? Login here"
                android:textColor="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
...
