<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_mi"
        android:icon="@drawable/baseline_home_24"
        android:title="Home" />
    <item
        android:id="@+id/courses_mi"
        android:icon="@drawable/baseline_list_alt_24"
        android:title="Courses" />
    <item
        android:id="@+id/offline_mi"
        android:icon="@drawable/baseline_download_for_offline_24"
        android:title="Offline" />
    <item
        android:id="@+id/profile_mi"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="Profile" />
</menu>