...
    <data>
        <variable
            name="user"
            type="com.example.proyek_mad.data.User" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profile_image"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/learning_eagle" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2E7DFF"
        android:text="Edit Profile"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        app:layout_constraintHorizontal_bias="0.555"
...
