<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_courses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.listkelas.CoursesFragment">

    <TextView
        android:id="@+id/tv_courses_title"
...
